test/Fail/Issue4520.err
Issue4520.agda:20.1-32: error: [GenericDocError]
Name  fromNat  is ambiguous
when scope checking the declaration
  {-# BUILTIN FROMNAT fromNat #-}
